fixed covers
fixed covers

--- a/cover.css
+++ b/cover.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 999;
