--- a/index.css
+++ b/index.css
@@ -14,6 +14,10 @@ body {
     line-height: 1.5;
 }
 
+.no-overflow {
+    overflow: hidden;
+}
+
 .button {
     color: var(--first-color);
     font-size: 16px;
@@ -117,7 +121,7 @@ header {
     font-size: 1.1em;
     box-shadow: 0 0 10px rgba(0,0,0,.1);
     user-select: none;
-    z-index: 999;
+    z-index: 111;
 }
 
 ul {
